# BinConverter

./: BinConverter.sln  CMakeLists.txt  README.md  imgui.ini
BinConverter/: BinConverter.vcxproj  BinConverter.vcxproj.filters  CMakeLists.txt  imgui.ini
BinConverter/src/: Application.cpp  Application.hpp  Settings.hpp  TableGenerator.cpp  TableGenerator.hpp  main.cpp
BinConverter/src/displays/: ChoicesDisplay.cpp  ChoicesDisplay.hpp  IDisplay.hpp  LogDisplay.cpp  LogDisplay.hpp  UploadDisplay.cpp  UploadDisplay.hpp
BinConverter/src/utilities/: ImGuiUtils.cpp  ImGuiUtils.hpp  LuaTableWriter.cpp  LuaTableWriter.hpp  Settings.hpp  TableGenerator.cpp  TableGenerator.hpp
Dependencies/: CMakeLists.txt
Dependencies/Glad/include/glad/: glad.h
Dependencies/Glad/lib/Debug-windows-x86_64/Glad/: Glad.idb  Glad.lib
Dependencies/Glad/lib/Release-windows-x86_64/Glad/: Glad.lib
Dependencies/glad/: CMakeLists.txt
Dependencies/imgui/: CMakeLists.txt
ImGui/: ImGui.vcxproj  ImGui.vcxproj.filters
Logger/: CMakeLists.txt  Logger.vcxproj  Logger.vcxproj.filters
Logger/include/Logger/: Logger.h  Logger.inl
Logger/src/: Logger.cpp  Logger.h  Logger.inl
Utils/: CMakeLists.txt  Utils.vcxproj  Utils.vcxproj.filters
Utils/Utilities/: SDL_Wrappers.cpp
Utils/include/Utilities/: SDL_Wrappers.h
Utils/src/: SDL_Wrappers.cpp
Window/: CMakeLists.txt  Window.vcxproj  Window.vcxproj.filters
Window/include/window/: Window.h
Window/src/: Window.cpp  Window.h
src/: Application.hpp
